--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -19,7 +19,6 @@
 }
 
 .signup-container .internal-container img {
-
     height: 20%;
 }
 
@@ -67,4 +66,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.signup-container .internal-container .border {
+    border: 2px solid rgb(163, 36, 36);
+    border-radius: 10%;
+    padding: 5%;
 }
